--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,13 @@ jobs:
 #        run: ./gradlew ktlintStagingDebugCheck
 
       - name: Run Unit Tests
-        run: ./gradlew test
+        uses: eskatos/gradle-command-action@v1.3.3
+        with:
+            gradle-version: current
+            wrapper-cache-enabled: true
+            dependencies-cache-enabled: true
+            configuration-cache-enabled: true
+            arguments: test
 
       - name: Run tests on emulator
         uses: reactivecircus/android-emulator-runner@v2
