--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Gradle cache
         uses: gradle/gradle-build-action@v2
 
-#     - name: Run Kotlin Linter
-#        run: ./gradlew ktlintStagingDebugCheck
+      - name: Run Kotlin Linter
+        run: ./gradlew lint
 
       - name: Run Unit Tests
         uses: eskatos/gradle-command-action@v1.3.3
