--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,17 @@
+def apiTarget = 29
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdk 31
+    compileSdk apiTarget
 
     defaultConfig {
         applicationId "com.semblanceoffunctionality.groceryapp"
         minSdk 21
-        targetSdk 31
+        targetSdk apiTarget
         versionCode 1
         versionName "1.0"
 
