--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,3 +16,9 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
+
+  - package-ecosystem: gradle
+    directory: "/app/"
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
