Creating exclude group to deal with duplicate class issue in instrumented tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,12 @@ android {
         baseline(file("lint-baseline.xml"))
     }
 
+    configurations {
+        androidTestImplementation {
+            exclude group: 'org.checkerframework', module:'jetified-checker-qual'
+            exclude group: 'org.checkerframework', module:'checker-qual'
+        }
+    }
 
     buildFeatures {
         dataBinding true
