Improving pipeline through adding parallelization

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
 
 # Where will they run
 jobs:
-   build:
+   lint:
       runs-on: macos-latest
 
       steps:
@@ -27,46 +27,83 @@ jobs:
 #      - name: Run Kotlin Linter
 #        run: ./gradlew lint
 
-      - name: Run Unit Tests
-        uses: eskatos/gradle-command-action@v2.1.5
-        with:
+   unit:
+     runs-on: macos-latest
+
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v3.0.2
+
+       - name: Set up our JDK environment
+         uses: actions/setup-java@v3.2.0
+         with:
+           distribution: 'temurin'
+           java-version: ${{ env.JAVA_VERSION }}
+
+       - name: Gradle cache
+         uses: gradle/gradle-build-action@v2
+
+       - name: Run Unit Tests
+         uses: eskatos/gradle-command-action@v2.1.5
+         with:
            gradle-version: current
            wrapper-cache-enabled: true
            dependencies-cache-enabled: true
            configuration-cache-enabled: true
            arguments: test
 
+  instrumented:
+    runs-on: macos-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.0.2
+
+      - name: Set up our JDK environment
+        uses: actions/setup-java@v3.2.0
+        with:
+          distribution: 'temurin'
+          java-version: ${{ env.JAVA_VERSION }}
+
+      - name: Gradle cache
+        uses: gradle/gradle-build-action@v2
+
       - name: Set up Android virtual device
         uses: reactivecircus/android-emulator-runner@v2
         with:
-           api-level: ${{ env.API_VERSION }}
-           arch: x86_64
-           target: ${{ env.API_VERSION >= 30 && 'google_apis' || 'default' }}
-           force-avd-creation: false
-           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-           disable-animations: false
-           script: echo "Generated AVD snapshot for caching."
+          api-level: ${{ env.API_VERSION }}
+          arch: x86_64
+          target: ${{ env.API_VERSION >= 30 && 'google_apis' || 'default' }}
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          disable-animations: false
+          script: echo "Generated AVD snapshot for caching."
 
-      - name: Run instrumented tests on Android virtual device
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-           api-level: ${{ env.API_VERSION }}
-           arch: x86_64
-           target: 'default'
-           force-avd-creation: false
-           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-           disable-animations: true
-           script: ./gradlew connectedAndroidTest --stacktrace
+        - name: Run instrumented tests on Android virtual device
+          uses: reactivecircus/android-emulator-runner@v2
+          with:
+            api-level: ${{ env.API_VERSION }}
+            arch: x86_64
+            target: 'default'
+            force-avd-creation: false
+            emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+            disable-animations: true
+            script: ./gradlew connectedAndroidTest --stacktrace
 
-      - name: Build all artifacts
-        id: buildAllApks
-        uses: eskatos/gradle-command-action@v2.1.5
-        with:
-           gradle-version: current
-           wrapper-cache-enabled: true
-           dependencies-cache-enabled: true
-           configuration-cache-enabled: true
-           arguments: assembleRelease
+  build:
+    runs-on: macos-latest
+    needs: [lint, unit, instrumented]
+
+    steps:
+        - name: Build all artifacts
+          id: buildAllApks
+          uses: eskatos/gradle-command-action@v2.1.5
+          with:
+            gradle-version: current
+            wrapper-cache-enabled: true
+            dependencies-cache-enabled: true
+            configuration-cache-enabled: true
+            arguments: assembleRelease
 
 ## Sign our artifact##
 #     - name: Sign artifact
