--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,19 @@ jobs:
    build:
      runs-on: macos-latest
      needs: [lint, unit, instrumented]
-
      steps:
+       - name: Checkout
+         uses: actions/checkout@v3.0.2
+
+       - name: Set up our JDK environment
+         uses: actions/setup-java@v3.2.0
+         with:
+           distribution: 'temurin'
+           java-version: ${{ env.JAVA_VERSION }}
+
+       - name: Gradle cache
+         uses: gradle/gradle-build-action@v2
+
        - name: Build all artifacts
          id: buildAllApks
          uses: eskatos/gradle-command-action@v2.1.5
