--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Gradle cache
         uses: gradle/gradle-build-action@v2
 
-#      - name: Run Kotlin Linter
-#        run: ./gradlew lint
+      - name: Run Kotlin Linter
+        run: ./gradlew lint
 
    unit:
      runs-on: macos-latest
