WIP: Swapping to Drawer Layout to make it easier to add stores. Transition still in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Grocery">
         <activity
-            android:name=".GroceryActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Grocery.NoActionBar">
             <intent-filter>
