--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,6 @@ apply plugin: 'androidx.navigation.safeargs.kotlin'
 android {
     compileSdkVersion rootProject.compileSdkVersion
 
-    lintOptions {
-        baseline(file("lint-baseline.xml"))
-    }
 
     configurations {
         androidTestImplementation {
@@ -61,6 +58,10 @@ android {
             excludes += ['/META-INF/AL2.0', '/META-INF/LGPL2.1']
         }
     }
+    lint {
+        baseline file('lint-baseline.xml')
+    }
+    namespace 'com.semblanceoffunctionality.grocery'
 }
 
 dependencies {
