Revert "Updating gradle"
This reverts commit a0703426d8f9dbbd0154115fc730209a75f97826.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,9 @@ apply plugin: 'androidx.navigation.safeargs.kotlin'
 android {
     compileSdkVersion rootProject.compileSdkVersion
 
+    lintOptions {
+        baseline(file("lint-baseline.xml"))
+    }
 
     configurations {
         androidTestImplementation {
@@ -58,10 +61,6 @@ android {
             excludes += ['/META-INF/AL2.0', '/META-INF/LGPL2.1']
         }
     }
-    lint {
-        baseline file('lint-baseline.xml')
-    }
-    namespace 'com.semblanceoffunctionality.grocery'
 }
 
 dependencies {
