Adding build and sign job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,19 +120,18 @@ jobs:
            configuration-cache-enabled: true
            arguments: assembleRelease
 
-## Sign our artifact##
-#     - name: Sign artifact
-#       id: signArtifact
-#       uses: r0adkll/sign-android-release@v1.0.1
-#       with:
-#          releaseDirectory: app/build/outputs/apk/ourbuildtype/release
-#          alias: ${{ secrets.KEYALIAS }}
-#          signingKeyBase64: ${{ secrets.KEYSTORE }}
-#          keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
-#          keyPassword: ${{ secrets.KEY_PASSWORD }}
-#
-#     - name: Upload our APK
-#       uses: actions/upload-artifact@v2.2.0
-#       with:
-#          name: Release artifact
-#          path: app/build/outputs/apk/ourbuildtype/release/app-artifact-*.apk
+       - name: Sign artifact
+         id: signArtifact
+         uses: r0adkll/sign-android-release@v1.0.1
+         with:
+            releaseDirectory: app/build/outputs/apk/ourbuildtype/release
+            alias: ${{ secrets.KEYALIAS }}
+            signingKeyBase64: ${{ secrets.KEYSTORE }}
+            keyStorePassword: ${{ secrets.KEYSTORE_PASSWORD }}
+            keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+       - name: Upload our APK
+         uses: actions/upload-artifact@v2.2.0
+         with:
+            name: Release artifact
+            path: app/build/outputs/apk/ourbuildtype/release/app-artifact-*.apk
