Specifying file to release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,6 +134,7 @@ jobs:
          uses: softprops/action-gh-release@v1
          with:
            draft: true
+           files: apk
 
        - name: Trigger Repository Dispatch
          uses: peter-evans/repository-dispatch@v2
