Fixing file name for upload to release job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,7 +137,7 @@ jobs:
          uses: softprops/action-gh-release@v1
          with:
            draft: true
-           files: apk
+           files: app-debug.apk
 
        - name: Trigger Repository Dispatch
          uses: peter-evans/repository-dispatch@v2
