Trying to get sign step to work

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,7 +137,7 @@ jobs:
          with:
            releaseDirectory: ./
            signingKeyBase64: ${{ secrets.SIGNINGKEYBASE64 }}
-#           alias: ${{ secrets.ALIAS }}
+           alias: ${{ secrets.ALIAS }}
            keyStorePassword: ${{ secrets.KEYSTOREPASSWORD }}
            keyPassword: ${{ secrets.KEYPASSWORD }}
 
