--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,9 +94,10 @@ jobs:
            disable-animations: true
            script: ./gradlew connectedAndroidTest --stacktrace
 
-   build:
+   build-nonprod:
      runs-on: macos-latest
      needs: [lint, unit, instrumented]
+     if: github.ref != 'refs/heads/master'
      steps:
        - name: Checkout
          uses: actions/checkout@v3.0.2
@@ -110,9 +111,9 @@ jobs:
        - name: Gradle cache
          uses: gradle/gradle-build-action@v2
 
-       - name: Build apk
-         id: buildApk
-         run: bash ./gradlew assembleDebug --
+       - name: build debug
+         if: github.ref != 'refs/heads/master'
+         run: ./gradlew app:bundleDebug
 
        - name: Upload our APK
          uses: actions/upload-artifact@v3.1.0
@@ -120,19 +121,11 @@ jobs:
            name: apk
            path: app/build/outputs/apk/debug/app-*.apk
 
-   release:
-     name: Uploads artifact to release
-     needs: build
-     runs-on: ubuntu-latest
+   build-candidate:
+     runs-on: macos-latest
+     needs: [ lint, unit, instrumented ]
+#     if: github.ref == 'refs/heads/master'
      steps:
-       - name: Decode Keystore
-         env:
-           ENCODED_STRING: ${{ secrets.SIGNINGKEYBASE64 }}
-         run: |
-           TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
-           mkdir "${TMP_KEYSTORE_FILE_PATH}"
-           echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
-
        - name: Checkout
          uses: actions/checkout@v3.0.2
 
@@ -142,8 +135,8 @@ jobs:
            distribution: 'temurin'
            java-version: ${{ env.JAVA_VERSION }}
 
-       - name: Make gradlew executable
-         run: chmod +x ./gradlew
+       - name: Gradle cache
+         uses: gradle/gradle-build-action@v2
 
        - name: build prod
          if: github.ref == 'refs/heads/master'
@@ -153,9 +146,13 @@ jobs:
            SIGNING_KEY_PASSWORD: ${{ secrets.KEYPASSWORD }}
            SIGNING_STORE_PASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
 
-       - name: build debug
-         if: github.ref != 'refs/heads/master'
-         run: ./gradlew app:bundleDebug
+       - name: Decode Keystore
+         env:
+           ENCODED_STRING: ${{ secrets.SIGNINGKEYBASE64 }}
+         run: |
+           TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
+           mkdir "${TMP_KEYSTORE_FILE_PATH}"
+           echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
 
        - name: Save Artifact
          uses: actions/upload-artifact@v3.1.0
@@ -163,3 +160,10 @@ jobs:
            name: signed-artifact
            path: app/build/outputs
            if-no-files-found: error
+
+       - name: Release Artifact to GitHub
+         uses: softprops/action-gh-release@v1
+         with:
+           tag_name: 'candidate'
+           files:
+            signed-artifact
