--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,7 +122,7 @@ jobs:
            path: app/build/outputs/apk/debug/app-*.apk
 
    build-candidate:
-     runs-on: macos-latest
+     runs-on: ubuntu-latest
      needs: [ lint, unit, instrumented ]
 #     if: github.ref == 'refs/heads/master'
      steps:
