--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,7 +123,7 @@ jobs:
 
    build-candidate:
      runs-on: ubuntu-latest
-     needs: [ lint, unit, instrumented ]
+#     needs: [ lint, unit, instrumented ]
 #     if: github.ref == 'refs/heads/master'
      steps:
        - name: Checkout
@@ -139,7 +139,6 @@ jobs:
          uses: gradle/gradle-build-action@v2
 
        - name: build prod
-         if: github.ref == 'refs/heads/master'
          run: ./gradlew app:bundleRelease
          env:
            SIGNING_KEY_ALIAS: ${{ secrets.ALIAS }}
