Trying to get artifacts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,4 +178,4 @@ jobs:
            tag_name: 'candidate'
            fail_on_unmatched_files: true
            files:
-            signed-artifact
+            '/home/runner/work/grocery-app/grocery-app/*'
