--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -145,6 +145,20 @@ jobs:
            SIGNING_KEY_PASSWORD: ${{ secrets.KEYPASSWORD }}
            SIGNING_STORE_PASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
 
+
+       - name: Decode Keystore
+         env:
+           ENCODED_STRING: ${{ secrets.SIGNINGKEYBASE64 }}
+         run: |
+           TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
+           mkdir "${TMP_KEYSTORE_FILE_PATH}"
+           echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
+
+       - uses: ncipollo/release-action@v1
+         with:
+           artifacts: "app/build/outputs/*"
+           tag: "candidate"
+
        - name: Save Artifact
          uses: actions/upload-artifact@v3.1.0
          with:
