--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -156,6 +156,7 @@ jobs:
 
        - uses: ncipollo/release-action@v1
          with:
+           allowUpdates: true
            artifacts: "app/build/outputs/*"
            tag: "candidate"
 
