--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -154,11 +154,11 @@ jobs:
            mkdir "${TMP_KEYSTORE_FILE_PATH}"
            echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
 
-       - uses: ncipollo/release-action@v1
+       - name: Release
+         uses: softprops/action-gh-release@v1
          with:
-           allowUpdates: true
-           artifacts: "app/build/outputs/*"
-           tag: "candidate"
+           files: "app/build/outputs/*"
+           tag_name: "candidate"
 
        - name: Save Artifact
          uses: actions/upload-artifact@v3.1.0
