--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,8 +123,8 @@ jobs:
 
    build-candidate:
      runs-on: ubuntu-latest
-#     needs: [ lint, unit, instrumented ]
-#     if: github.ref == 'refs/heads/master'
+     needs: [ lint, unit, instrumented ]
+     if: github.ref == 'refs/heads/master'
      steps:
        - name: Checkout
          uses: actions/checkout@v3.0.2
@@ -144,7 +144,6 @@ jobs:
            SIGNING_KEY_ALIAS: ${{ secrets.ALIAS }}
            SIGNING_KEY_PASSWORD: ${{ secrets.KEYPASSWORD }}
            SIGNING_STORE_PASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
-
 
        - name: Decode Keystore
          env:
@@ -173,31 +172,3 @@ jobs:
            tag_name: v0.0.2
          env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-   release:
-     runs-on: ubuntu-latest
-     needs: [build-candidate]
-     steps:
-       - name: Download artifact
-         uses: actions/download-artifact@v3
-         with:
-           name: signed-artifact
-
-       - name: Decode Keystore
-         env:
-           ENCODED_STRING: ${{ secrets.SIGNINGKEYBASE64 }}
-         run: |
-           TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
-           mkdir "${TMP_KEYSTORE_FILE_PATH}"
-           echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
-
-       - name: Debug
-         run: 'ls'
-
-       - name: Release Artifact to GitHub
-         uses: softprops/action-gh-release@v1
-         with:
-           tag_name: 'candidate'
-           fail_on_unmatched_files: true
-           files:
-            '/home/runner/work/grocery-app/grocery-app/*'
