--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,6 @@
 name: Build
 
-on:
-  pull_request: 
-  push:
-    branches:
-      - master
+on: pull_request
 
 env:
   API_VERSION: 31
@@ -12,87 +8,11 @@ env:
 
 # Where will they run
 jobs:
-   lint:
-      runs-on: macos-latest
-
-      steps:
-      - name: Checkout
-        uses: actions/checkout@v3.0.2
-
-      - name: Set up our JDK environment
-        uses: actions/setup-java@v3.4.0
-        with:
-           distribution: 'temurin'
-           java-version: ${{ env.JAVA_VERSION }}
-
-      - name: Gradle cache
-        uses: gradle/gradle-build-action@v2
-
-      - name: Run Kotlin Linter
-        run: ./gradlew lint
-
-   unit:
-     runs-on: macos-latest
-
-     steps:
-       - name: Checkout
-         uses: actions/checkout@v3.0.2
-
-       - name: Set up our JDK environment
-         uses: actions/setup-java@v3.4.0
-         with:
-           distribution: 'temurin'
-           java-version: ${{ env.JAVA_VERSION }}
-
-       - name: Gradle cache
-         uses: gradle/gradle-build-action@v2
-
-       - name: Run Unit Tests
-         uses: eskatos/gradle-command-action@v2.2.1
-         with:
-           gradle-version: current
-           wrapper-cache-enabled: true
-           dependencies-cache-enabled: true
-           configuration-cache-enabled: true
-           arguments: test
-
-   instrumented:
-     runs-on: macos-latest
-
-     steps:
-       - name: Checkout
-         uses: actions/checkout@v3.0.2
-
-       - name: Set up our JDK environment
-         uses: actions/setup-java@v3.4.0
-         with:
-           distribution: 'temurin'
-           java-version: ${{ env.JAVA_VERSION }}
-
-       - name: Gradle cache
-         uses: gradle/gradle-build-action@v2
-
-       - name: Set up Android virtual device
-         uses: reactivecircus/android-emulator-runner@v2
-         with:
-           api-level: ${{ env.API_VERSION }}
-           arch: x86_64
-           target: ${{ env.API_VERSION >= 30 && 'google_apis' || 'default' }}
-           force-avd-creation: false
-           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-           disable-animations: false
-           script: echo "Generated AVD snapshot for caching."
-
-       - name: Run instrumented tests on Android virtual device
-         uses: reactivecircus/android-emulator-runner@v2
-         with:
-           api-level: ${{ env.API_VERSION }}
-           arch: x86_64
-           target: 'default'
-           force-avd-creation: false
-           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-           disable-animations: true
-           script: ./gradlew connectedAndroidTest --stacktrace
+   run-tests:
+     uses: araneforseti/grocery-app/.github/workflows/tests.yml@main
+     with:
+       api_level: ${{ env.API_VERSION }}
+       java_version: ${{ env.JAVA_VERSION }}
 
    build-nonprod:
      runs-on: macos-latest
@@ -120,55 +40,3 @@ jobs:
          with:
            name: apk
            path: app/build/outputs/apk/debug/app-*.apk
-
-   build-candidate:
-     runs-on: ubuntu-latest
-     needs: [ lint, unit, instrumented ]
-     if: github.ref == 'refs/heads/master'
-     steps:
-       - name: Checkout
-         uses: actions/checkout@v3.0.2
-
-       - name: Set up our JDK environment
-         uses: actions/setup-java@v3.4.0
-         with:
-           distribution: 'temurin'
-           java-version: ${{ env.JAVA_VERSION }}
-
-       - name: Gradle cache
-         uses: gradle/gradle-build-action@v2
-
-       - name: build prod
-         run: ./gradlew app:bundleRelease
-         env:
-           SIGNING_KEY_ALIAS: ${{ secrets.ALIAS }}
-           SIGNING_KEY_PASSWORD: ${{ secrets.KEYPASSWORD }}
-           SIGNING_STORE_PASSWORD: ${{ secrets.KEYSTOREPASSWORD }}
-
-       - name: Decode Keystore
-         env:
-           ENCODED_STRING: ${{ secrets.SIGNINGKEYBASE64 }}
-         run: |
-           TMP_KEYSTORE_FILE_PATH="${RUNNER_TEMP}"/keystore
-           mkdir "${TMP_KEYSTORE_FILE_PATH}"
-           echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
-
-       - name: Release
-         uses: softprops/action-gh-release@v1
-         with:
-           files: "app/build/outputs/bundle/release/*"
-           tag_name: "candidate"
-
-       - name: Save Artifact
-         uses: actions/upload-artifact@v3.1.0
-         with:
-           name: signed-artifact
-           path: app/build/outputs
-           if-no-files-found: error
-
-       - name: Tag Repo
-         uses: richardsimko/update-tag@v1
-         with:
-           tag_name: v0.0.2
-         env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
