--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -12,7 +12,7 @@ env:
 # Where will they run
 jobs:
   run-tests:
-    uses: araneforseti/grocery-app/.github/workflows/tests.yml@main
+    uses: araneforseti/grocery-app/.github/workflows/tests.yml@master
     with:
       api_level: ${{ env.API_VERSION }}
       java_version: ${{ env.JAVA_VERSION }}
