--- a/.github/workflows/master-build.yml
+++ b/.github/workflows/master-build.yml
@@ -19,7 +19,7 @@ jobs:
 
   build-candidate:
     runs-on: ubuntu-latest
-    needs: [ lint, unit, instrumented ]
+    needs: [ run-tests ]
     steps:
      - name: Checkout
        uses: actions/checkout@v3.0.2
