--- a/.github/workflows/upload_to_store.yml
+++ b/.github/workflows/upload_to_store.yml
@@ -16,4 +16,4 @@ jobs:
           packageName: com.semblanceoffunctionality.grocery
           releaseFiles: app-release.aab
           track: production
-          status: completed
+          status: draft
