--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -5,8 +5,7 @@ permissions:
   contents: write
 
 on: 
-  schedule:
-    - cron: '0 0 * * *'
+  pull_request:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
