--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -6,6 +6,7 @@ permissions:
 
 on: 
   pull_request:
+    types: [opened]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
